[package]
name = "healthcheck"
version = "0.1.0"
authors = ["Lena Fuhrimann"]
edition = "2024"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }

[profile.release]
opt-level = "z"
lto = true
